--- a/package.json
+++ b/package.json
@@ -5,10 +5,16 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "deploy": "gh-pages -d dist",
     "build": "vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
+    "gh-pages": "^6.0.0",
     "vite": "^4.4.5"
-  }
+  },
+  "main": "index.html",
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
